@@ -3,6 +3,8 @@
       for eg: /var/lib/urpmi/synthesis.hdlist.<medium-name> is now
       /var/lib/urpmi/<medium-name>/synthesis.hdlist.cz
     it allows easier medium update without using urpmi.update (#31893)
+    (but with --urpmi-root, old statedir files are used to allow compatibility
+    with older urpmi)
   o fix handling --urpmi-root <relative dir>
 - gurpmi:
   o do cancel when pressing the 'No' button (#41648)
